# ESP32S3N16R8-Swift-YOLO-Tiny

./: README.md  sdkconfig
components/BSP/: CMakeLists.txt
components/BSP/CAMERA/: camera.c  camera.h
components/modules/: CMakeLists.txt  Kconfig
components/modules/model/: fomo_model_data.cpp  fomo_model_data.h  motion_model_data.cpp  motion_model_data.h  yolo_model_data.h
main/: CMakeLists.txt  main.c
main/APP/: algo_yolo.cpp  esp_color_detection.cpp  esp_color_detection.hpp
tools/: show.py
